crates/carta/tests/snapshots/golden_e2e__csv__latex__crlf.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
x & y \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
1 & 2 \\
3 & 4 \\
\end{longtable}
}
