crates/carta/tests/snapshots/golden_e2e__csv__latex__empty-fields.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
left & right \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
& filled \\
filled & \\
& \\
\end{longtable}
}
