crates/carta/tests/snapshots/golden_e2e__csv__latex__header-only.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
header one & header two \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
only header row above & \\
\end{longtable}
}
