crates/carta/tests/snapshots/golden_e2e__csv__latex__literal-text.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
markup & link \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
*not italic* & {[}not a link{]}(url) \\
\end{longtable}
}
