crates/carta/tests/snapshots/golden_e2e__csv__latex__quoted.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}
  >{\raggedright\arraybackslash}p{(\linewidth - 2\tabcolsep) * \real{0.5000}}@{}}
\toprule\noalign{}
product & note \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
Widget, deluxe & ships "today" \\
\vtop{\hbox{\strut multi}\hbox{\strut line cell}} & plain \\
\end{longtable}
}
