crates/carta/tests/snapshots/golden_e2e__csv__latex__ragged.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lll@{}}
\toprule\noalign{}
a & b & c \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
1 & 2 & \\
4 & 5 & 6 \\
8 & 9 & 10 \\
\end{longtable}
}
