crates/carta/tests/snapshots/golden_e2e__csv__latex__single-column.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}l@{}}
\toprule\noalign{}
fruit \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
apple \\
banana \\
cherry \\
\end{longtable}
}
