crates/carta/tests/snapshots/golden_e2e__csv__latex__whitespace.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}lll@{}}
\toprule\noalign{}
col1 & col2 & col3 \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & spaced text & trailing  \\
\end{longtable}
}
